# damn-vulnerable-ML-serialization

./: .gitignore  README.md  pyproject.toml  unsafe_pickle.py  unsafe_tf.py  unsafe_torch.py
