[tool.poetry]
name = "damn-vulnerable-ML-serialization"
version = "0.1.0"
description = ""
authors = ["RiccardoBiosas <rbios@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
fickling = "0.1.3"

[tool.poetry.group.dev.dependencies]
numpy = ">=1.19.3"
torch = "2.5.1"
tensorflow = "2.17.1"
modelscan = "0.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
